--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,10 @@
-<h1>{{message}}</h1>
-<h2>{{error.status}}</h2>
-<pre>{{error.stack}}</pre>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h1 class="display-3">Tyler Test</h1>
+        <p class="lead">Thanks for taking our test</p>
+        <hr class="my-2">
+        <p class="lead">
+            <a class="btn btn-primary btn-lg" href="/" role="button">Page not found, go to home page</a>
+        </p>
+    </div>
+</div>
