--- a/views/msg.hbs
+++ b/views/msg.hbs
@@ -1,10 +1,10 @@
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <h1 class="display-3">Tyler Test</h1>
-        <p class="lead">You can start the test by clicking the button below</p>
+        <p class="lead">Thanks for taking our test</p>
         <hr class="my-2">
         <p class="lead">
-            <a class="btn btn-primary btn-lg" href="/test/" role="button">Start The Test</a>
+            <a class="btn btn-primary btn-lg" href="/" role="button">{{msg}}</a>
         </p>
     </div>
 </div>
